log
Thu 09 May 2024 09:33:17 PM UTC: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
952567e
Thu 09 May 2024 09:52:58 PM UTC: 
 treemap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:15: error: variable ‘current’ set but not used [-Werror=unused-but-set-variable]
   80 |     TreeNode *current = tree->current;
      |               ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fa364d5
